--- a/SAPWeb/Views/Shared/_Layout.cshtml
+++ b/SAPWeb/Views/Shared/_Layout.cshtml
@@ -15,6 +15,12 @@
     <!-- ===== Plugin CSS ===== -->
     <link href="~/Content/theme/components/chartist-js/dist/chartist.min.css" rel="stylesheet">
     <link href="~/Content/theme/components/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
+    <link href="~/Content/theme/plugins/components/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/theme/plugins/components/timepicker/bootstrap-timepicker.min.css" rel="stylesheet">
+    <link href="~/Content/theme/plugins/components/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="~/Content/theme/plugins/components/datatables/jquery.dataTables.min.css" rel="stylesheet">
+
+    <link href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css" rel="stylesheet" type="text/css" />
     <!-- ===== Animation CSS ===== -->
     <link href="~/Content/theme/css/animate.css" rel="stylesheet">
     <!-- ===== Custom CSS ===== -->
@@ -220,7 +226,7 @@
                             <a class="active waves-effect" href="@Url.Action("index","Dashboard")" aria-expanded="false"><i class="icon-screen-desktop fa-fw"></i> <span class="hide-menu"> Dashboard </span></a>
                         </li>
                         <li class="two-column">
-                            <a class="waves-effect" href="javascript:void(0);" aria-expanded="false"><i class="icon-equalizer fa-fw"></i> <span class="hide-menu"> Sales Quotation</span></a>
+                            <a class="waves-effect" href="@Url.Action("index","SalesQuotation")" aria-expanded="false"><i class="icon-equalizer fa-fw"></i> <span class="hide-menu"> Sales Quotation</span></a>
                         </li>
                     </ul>
                 </nav>
@@ -229,7 +235,9 @@
         <!-- ===== Left-Sidebar-End ===== -->
         <!-- ===== Page-Content ===== -->
         <div class="page-wrapper">
-            @RenderBody()
+            <div class="container-fluid">
+                @RenderBody()
+            </div>
             <footer class="footer t-a-c">
                 © @DateTime.Now.Year Develop by <a href="https://adscodegensolutions.com/">ADSCode Gen Solutions</a>
             </footer>
@@ -259,6 +267,19 @@
     <script src="~/Content/theme/plugins/components/sparkline/jquery.charts-sparkline.js"></script>
     <script src="~/Content/theme/plugins/components/knob/jquery.knob.js"></script>
     <script src="~/Content/theme/plugins/components/easypiechart/dist/jquery.easypiechart.min.js"></script>
+    <script src="~/Content/theme/plugins/components/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <script src="~/Content/theme/plugins/components/datatables/jquery.dataTables.min.js"></script>
+
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
+    <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
+    <script src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
+    <!-- Date range Plugin JavaScript -->
+    <script src="~/Content/theme/plugins/components/timepicker/bootstrap-timepicker.min.js"></script>
+    <script src="~/Content/theme/plugins/components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="~/Content/theme/js/db1.js"></script>
     <!-- ===== Style Switcher JS ===== -->
     <script src="~/Content/theme/plugins/components/styleswitcher/jQuery.style.switcher.js"></script>
