--- a/SAPWeb/Views/Auth/Login.cshtml
+++ b/SAPWeb/Views/Auth/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model SAPWeb.Models.UserLogin
+@{
     Layout = null;
 }
 
@@ -27,46 +28,34 @@
     <section id="wrapper" class="login-register">
         <div class="login-box">
             <div class="white-box">
-                <form class="form-horizontal form-material" id="loginform" action="index.html">
-                    <h3 class="box-title m-b-20">Sign In</h3>
+                @using (Html.BeginForm("Login", "Auth", FormMethod.Post, new { id = "frmSignIn", @class = "form-horizontal" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true)
+                    <div class="form-group">
+                        <div class="col-xs-12 text-center">
+                            <div class="user-thumb text-center">
+                                <img alt="thumbnail" width="200" src="~/Content/theme/plugins/images/company/logo.png">
+                                <h3 class="box-title m-b-20">Sign In</h3>
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Username">
+                            @Html.TextBoxFor(model => model.UserName  , new { @class = "form-control", id = "txtusername", placeholder = "Username", maxlength = 50, required = "required" })
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Password">
+                            @Html.TextBoxFor(model => model.Password, new { type = "Password", @class = "form-control large-control", id = "txtPassword", placeholder = "Password", maxlength = 50, required = "required" })
                         </div>
                     </div>
-                    @*<div class="form-group">
-                        <div class="col-md-12">
-                            <div class="checkbox checkbox-primary pull-left p-t-0">
-                                <input id="checkbox-signup" type="checkbox">
-                                <label for="checkbox-signup"> Remember me </label>
-                            </div>
-                            <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a>
-                        </div>
-                    </div>*@
                     <div class="form-group text-center m-t-20">
                         <div class="col-xs-12">
-                            <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="button" id="loginbtn">Log In</button>
+                            <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"  type="submit" id="loginbtn">Log In</button>
                         </div>
                     </div>
-                    @*<div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-                            <div class="social">
-                                <a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a>
-                                <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a>
-                            </div>
-                        </div>
-                    </div>*@
-                    @*<div class="form-group m-b-0">
-                        <div class="col-sm-12 text-center">
-                            <p>Don't have an account? <a href="register.html" class="text-primary m-l-5"><b>Sign Up</b></a></p>
-                        </div>
-                    </div>*@
-                </form>
+                }
                 <form class="form-horizontal" id="recoverform" action="index.html">
                     <div class="form-group ">
                         <div class="col-xs-12">
