--- a/SAPWeb/Views/Shared/_Layout.cshtml
+++ b/SAPWeb/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <link href="~/Content/theme/plugins/components/timepicker/bootstrap-timepicker.min.css" rel="stylesheet">
     <link href="~/Content/theme/plugins/components/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
     <link href="~/Content/theme/plugins/components/datatables/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="~/Content/theme/plugins/components/toastr/css/toastr.css" rel="stylesheet">
 
     <link href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css" rel="stylesheet" type="text/css" />
     <!-- ===== Animation CSS ===== -->
@@ -269,6 +270,7 @@
     <script src="~/Content/theme/plugins/components/easypiechart/dist/jquery.easypiechart.min.js"></script>
     <script src="~/Content/theme/plugins/components/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="~/Content/theme/plugins/components/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/Content/theme/plugins/components/toastr/js/toastr.min.js"></script>
 
     <script src="https://cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
@@ -283,6 +285,8 @@
     <script src="~/Content/theme/js/db1.js"></script>
     <!-- ===== Style Switcher JS ===== -->
     <script src="~/Content/theme/plugins/components/styleswitcher/jQuery.style.switcher.js"></script>
+    @Scripts.Render("~/SAPWeb/js")
+
     @RenderSection("scripts", required: false)
 </body>
 
